# django-signature-pad

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  npm.py  package-lock.json  package.json  pyproject.toml  webpack.common.js  webpack.prod.js
django_signature_pad/: apps.py  fields.py  forms.py  settings.py  widgets.py
django_signature_pad/locale/zh_Hant/LC_MESSAGES/: django.mo  django.po
django_signature_pad/src/css/: signature_pad.css
django_signature_pad/src/js/: signature_pad.js
django_signature_pad/static/: signature_pad.css  signature_pad.css.map  signature_pad.js  signature_pad.js.map
django_signature_pad/templates/django_signature_pad/: wagtail_widget.html
sdu/signature_pad/: apps.py  helpers.py  widgets.py
sdu/signature_pad/templates/signature_pad/: wagtail_widget.html  widget.html
